# mimicry-madness

./: .gitignore  README.md  TODO.md  pyproject.toml
data/: README.md  metadata_FUNED_full.csv  metadata_toy_dataset.csv  mw-metadata.csv  mw-nobg-metadata.csv
embeddings/: embeddings.pt
notebooks/: david-playground.ipynb
src/mimicry_madness/: __init__.py  constants.py  crop_alpha_images.py  embed.py  embeddings.py  extract_snake_view.py  generate_embeddings.py  main.py  models.py  utils.py  visualization_utils.py  visualize.py  visualize_snakes.py  visualize_wasp_moths.py  viz.py
visualization/: pca_dashboard.py  viz_dashboard.py
