[project]
name = "mimicry-madness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Carlyn", email = "davidecarlyn@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "open-clip-torch>=3.1.0",
    "pandas>=2.3.1",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
